--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,6 @@
   "short_name": "LSC",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#000000"
+  "background_color": "#0f1c2e",
+  "theme_color": "#0f1c2e"
 }
